# redis-stack-server-ACI

./: .gitignore  Dockerfile  README.md  config_template.yml  environment.yml  pyproject.toml  refresh_cert.sh  run.sh
container_scripts/: delete_image.bat
python/: common.py  container_registry.py  deploy_script.py  deployment.py  dockers.py  load_config.py  resource_group.py  storage_share.py  template_expanders.py  test1.py
src/redisaci/: Dockerfile_first  common.py  container_registry.py  deploy_script.py  deployment.py  dockers.py  load_config.py  refresh_cert.sh  storage_share.py  template_expanders.py
src/redisaci/container_scripts/: build_image.bat  build_image.sh  delete_image.sh  push_image.bat  push_image.sh
src/redisaci/templates/: deployment_template.txt  nginx_template.txt  nginx_template_first.txt  redis_template.txt  run_first_template.txt
templates/: deployment_template.txt  redis_template.txt  run_first_template.txt
